[gd_scene load_steps=2 format=3 uid="uid://dwqx1ai7cdq3y"]

[ext_resource type="Script" uid="uid://bm8ixumbs0ktf" path="res://pytanko.gd" id="1_g5w0g"]

[node name="Pytanie" type="Node2D"]
top_level = true
z_index = 1
script = ExtResource("1_g5w0g")

[node name="Background" type="ColorRect" parent="."]
z_index = -1
layout_direction = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 2000.0
offset_bottom = 1200.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
modulate = Color(0, 0.747992, 0.748391, 1)
self_modulate = Color(0.900689, 0.507975, 0.949468, 1)
top_level = true
z_index = 1
offset_left = 1000.0
offset_top = 100.0
offset_right = 1028.0
offset_bottom = 123.0
text = "PYTANIE"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="."]
offset_left = 240.0
offset_top = 1000.0
offset_right = 440.0
offset_bottom = 1100.0
text = "a"
vertical_icon_alignment = 0
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="."]
offset_left = 680.0
offset_top = 1000.0
offset_right = 880.0
offset_bottom = 1100.0
text = "b"
metadata/_edit_use_anchors_ = true

[node name="Button3" type="Button" parent="."]
offset_left = 1120.0
offset_top = 1000.0
offset_right = 1320.0
offset_bottom = 1100.0
text = "c"
metadata/_edit_use_anchors_ = true

[node name="Button4" type="Button" parent="."]
offset_left = 1560.0
offset_top = 1000.0
offset_right = 1760.0
offset_bottom = 1100.0
text = "d"
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="button_up" from="Button2" to="." method="_on_button_2_button_up"]
[connection signal="button_up" from="Button3" to="." method="_on_button_3_button_up"]
[connection signal="button_up" from="Button4" to="." method="_on_button_4_button_up"]
